# news-analyzer

./: .gitignore  CLAUDE.md  README.md  package-lock.json
.claude/: settings.local.json
.github/workflows/: test-build.yml  windows-build.yml
news-analyzer/: .gitignore  README.md  index.html  package.json  vite.config.ts
news-analyzer/src/: App.vue  main.ts
news-analyzer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
news-analyzer/src-tauri/capabilities/: main.json
news-analyzer/src-tauri/src/: main.rs  rss.rs  state.rs
news-analyzer/src-tauri/src/commands/: account.rs  analysis.rs  article.rs  feed.rs  mod.rs  settings.rs
news-analyzer/src-tauri/src/database/: mod.rs  models.rs  operations.rs
news-analyzer/src-tauri/src/sql/: schema.sql
news-analyzer/src-tauri/src/weread/: account_manager.rs  client.rs  mod.rs
news-analyzer/src/components/: AccountsPage.vue  AnalysisResultsPage.vue  ArticlesPage.vue  FeedsPage.vue  SettingsPage.vue
news-analyzer/src/types/: index.ts
news-analyzer/src/utils/: timeUtils.ts
wechat-article-exporter/: nuxt.config.ts  package-lock.json
wechat-article-exporter/server/api/web/mp/: accounts.get.ts  import.post.ts
wechat-article-exporter/server/kv/: account.ts
wechat-article-skill/: .env.example  LLM-SETUP.md  README-AUTH.md  README.md  auth-manager.js  config-manager.js  daily-analysis-llm.js  llm-analyzer.js  package-lock.json  package.json  recent-articles.js  wechat-article-analysis.skill  weekly-analysis.js
