[package]
name = "news-analyzer-mvp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "News Analyzer with RSS and WeChat Read integration"
authors = ["fagnxia113 <fagnxia113@gmail.com>"]

[build-dependencies]
tauri-build = { version = "2.0", features = [], default-features = false }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
fastrand = "2.0"
json5 = "0.4.1"
once_cell = "1.21.3"
thiserror = "2.0.17"
feed-rs = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "news-analyzer-mvp"
path = "src/main.rs"
